--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "traversy",
+  "name": "chandu",
   "version": "1.0.0",
-  "description": "nodeandexpressfromscratch",
-  "main": "app.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "Node app"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
@@ -12,7 +12,7 @@
     "body-parser": "^1.17.2",
     "debug": "^2.6.8",
     "express": "^4.15.3",
-    "mongoose": "^4.10.6",
+    "mongoose": "^4.10.7",
     "pug": "^2.0.0-rc.2"
   }
 }
